# tree-sitter-heex

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Cargo.toml  LICENSE.md  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: action.yml
bindings/c/: tree-sitter-heex.h  tree-sitter-heex.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_heex/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterHeexTests/: TreeSitterHeexTests.swift
queries/: highlights.scm  injections.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: attributes.txt  comments.txt  components.txt  directives.txt  expressions.txt  phoenix.txt  script.txt  slots.txt  special_attributes.txt  tags.txt  text.txt
test/highlight/: main.heex
