[package]
name = "tree-sitter-heex"
description = "heex grammar for the tree-sitter parsing library"
version = "0.7.0"
keywords = ["incremental", "parsing", "heex"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-heex"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.22"

[build-dependencies]
cc = "1.0"
